feat: Introduce an `SEO` component for dynamic meta tag management and update `index.html` with revised meta content.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>TipKoro - Bangladesh's Ko-fi Alternative | Support Creators via bKash, Nagad</title>
-  <meta name="title" content="TipKoro - Bangladesh's Ko-fi Alternative | Support Creators via bKash, Nagad" />
+  <title>TipKoro - Bangladesh's Ko-fi Alternative | Support Creators in your way</title>
+  <meta name="title" content="TipKoro - Bangladesh's Ko-fi Alternative | Support Creators in your way" />
   <meta name="description"
-    content="TipKoro is Bangladesh's Ko-fi alternative. Send tips to your favorite Bangladeshi creators via bKash, Nagad, Rocket. Free for supporters, only ৳150/month for creators." />
+    content="TipKoro is Bangladesh's Ko-fi alternative. Send tips to your favorite Bangladeshi creators. Free for supporters, only ৳150/month for creators." />
   <meta name="keywords"
     content="TipKoro, support Bangladeshi creators, bKash tips, Nagad payments, Rocket tips, creator support Bangladesh, buy me a coffee Bangladesh, ko-fi alternative Bangladesh, tip YouTubers Bangladesh, donate to streamers Bangladesh, Bangladeshi content creators, bKash donation, Nagad donation" />
   <meta name="author" content="TipKoro" />
@@ -37,24 +37,23 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://tipkoro.com/" />
-  <meta property="og:title" content="TipKoro - Bangladesh's Ko-fi Alternative | Support Creators via bKash, Nagad" />
+  <meta property="og:title" content="TipKoro - Bangladesh's Ko-fi Alternative | Support Creators in your way" />
   <meta property="og:description"
-    content="TipKoro is Bangladesh's Ko-fi alternative. Send tips to your favorite Bangladeshi creators via bKash, Nagad, Rocket. Free for supporters, only ৳150/month for creators." />
-  <meta property="og:image"
-    content="https://storage.googleapis.com/gpt-engineer-file-uploads/DiyZvTsBMKZzBIrNCfpQP7nQfMe2/social-images/social-1768828728149-og-image (1).png" />
+    content="TipKoro is Bangladesh's Ko-fi alternative. Send tips to your favorite Bangladeshi creators. Free for supporters, only ৳150/month for creators." />
+  <meta property="og:image" content="https://openpaste.vercel.app/i/d829d730" />
   <meta property="og:site_name" content="TipKoro" />
   <meta property="og:locale" content="en_BD" />
 
   <!-- X (Twitter) -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://tipkoro.com/" />
-  <meta property="twitter:title"
-    content="TipKoro - Bangladesh's Ko-fi Alternative | Support Creators via bKash, Nagad" />
+  <meta property="twitter:title" content="TipKoro - Bangladesh's Ko-fi Alternative | Support Creators in your way" />
   <meta property="twitter:description"
-    content="TipKoro is Bangladesh's Ko-fi alternative. Send tips to your favorite Bangladeshi creators via bKash, Nagad, Rocket. Free for supporters, only ৳150/month for creators." />
-  <meta property="twitter:image"
-    content="https://storage.googleapis.com/gpt-engineer-file-uploads/DiyZvTsBMKZzBIrNCfpQP7nQfMe2/social-images/social-1768828728149-og-image (1).png" />
+    content="TipKoro is Bangladesh's Ko-fi alternative. Send tips to your favorite Bangladeshi creators. Free for supporters, only ৳150/month for creators." />
+  <meta property="twitter:image" content="https://openpaste.vercel.app/i/d829d730" />
   <meta name="twitter:site" content="@TipKoro" />
+
+  <!-- Meta Tags Generated with https://metatags.io -->
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
